Fix: improve text legibility

--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -9,7 +9,7 @@
 }
 
 .nav-item a.router-link-active {
-     border-bottom: 1px solid $lightestGray;
+     border-bottom: 1px solid $lightGray;
 }
 
 .contact-item a {
@@ -18,4 +18,9 @@
 
 .ui-post-summary {
   color: $black !important;
+}
+
+.ui-post-meta {
+  color: $black !important;
+  font-weight: 400;
 }
